# arc-devtools-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
skill/arc-devtools/: SKILL.md
src/: browser.rs  cdp.rs  daemon.rs  friendly.rs  install.rs  main.rs  protocol.rs
src/commands/: console.rs  evaluate.rs  format.rs  input.rs  mod.rs  navigate.rs  network.rs  pages.rs  performance.rs  record_video.rs  screenshot.rs  snapshot.rs
